APPS-5538 Merged ExamControllerDelegate's clear methods